--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,23 @@
 #spring.application.name=aprendiz
-server.port=8080
-
-#DATA BASE
-spring.datasource.url=jdbc:mysql://localhost/springboot?useSSL=false
-spring.datasource.dbname=springboot
+spring.datasource.url=jdbc:mariadb://localhost:3306/springboot
 spring.datasource.username=Doom
 spring.datasource.password=0303456
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+
+
+
+#server.port=8080
+
+#DATA BASE
+#spring.datasource.url=jdbc:mysql://localhost/springboot?useSSL=false
+#spring.datasource.dbname=springboot
+#spring.datasource.username=Doom
+#spring.datasource.password=0303456
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+
 
 
 
