feat: persist JWT token in localStorage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,15 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 
 
+#JWT
+security.jwt.secret=palabraSecretaUsadaParaGenerarCodigoEncriptado
+security.jwt.issuer=Main
+#security.jwt.ttlMillis = hours * 3600000
+#La sesion dura 2hs
+security.jwt.ttlMillis=7200000
+
+
+
 
 #server.port=8080
 
