WIP: JWT token tracking

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.application.name=aprendiz
+#spring.application.name=aprendiz.NO se sube esto a git,esto debe ser secreto
 spring.datasource.url=jdbc:mariadb://localhost:3306/springboot
 spring.datasource.username=Doom
 spring.datasource.password=0303456
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 
 
-#JWT
+#JWT.La clave secreta esta aqui,solo el server conoce la clave secreta
 security.jwt.secret=palabraSecretaUsadaParaGenerarCodigoEncriptado
 security.jwt.issuer=Main
 #security.jwt.ttlMillis = hours * 3600000
